# chain-shm

./: Dockerfile  FastSAM-s.pt  README.md  __init__.py  chain_seg_best.pt  fastsamtest.py  inspect.sh  main.py  offline_test.py  pyproject.toml  run_offline_test.py  sam2_s.pt
Chain-Link-1/: README.dataset.txt  README.roboflow.txt  data.yaml
Chain-Link-1/test/labels/: 20240210-05h55m13s_03439LRR_JPG.rf.3f40257f8bcc47ec99b3246354ce04f0.txt  20240210-05h55m13s_03608LRL_JPG.rf.75d6410552f8ec72298a09f91524fcc2.txt  20240210-05h55m13s_03745LRR_JPG.rf.2ac0967c1b41eec33bb41f209ef41a5d.txt  20240210-05h55m13s_04115LRR_JPG.rf.99b73b95daccf8599f1426149ee2b223.txt  20240210-05h55m13s_06544LRR_JPG.rf.ca07cb6ccdd0429ff1af97236b48122e.txt  20240210-05h55m13s_06712LRR_JPG.rf.d94eb5f9d565c536743686d3b3bfe25a.txt  20240210-05h55m13s_06754LRL_JPG.rf.b6f8bb44b439212ae67ae3108dc64f5c.txt  20240210-05h55m13s_06970LRR_JPG.rf.ed18cb9aa43f81667c9480a6ca64fcfb.txt  20240210-05h55m13s_07508LRR_JPG.rf.7029860c06746a9aaeddf00bfee0a9f5.txt  20240210-05h55m13s_07998LRR_JPG.rf.8f4c4f6229d0dddbb0b1ea59f8d1739f.txt
Chain-Link-1/train/labels/: 20240210-05h55m13s_01868LRL_JPG.rf.6228d03c0e2a570b4d652b9ebd935333.txt  (+197 more)
debug_seg/: recon_chain.json  report.txt  segments_chain.json
src/: __init__.py  boundary_detector.py  component_splitter.py  gap_bridge.py  horizontal_chain.py  horizontal_correction.py  inspector.py  perspective_correction.py  reconstruction.py  sam2_segmenter.py  segmentation.py  side_arc.py  vertical_link_seg.py  wear_analysis.py  wire_analyser.py
(+19 files in other folders)
