[project]
name = "chain-inspector"
version = "0.1.0"
description = "Chain wear inspection using FastSAM + morphological analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scikit-image>=0.21",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "ultralytics>=8.0",   # FastSAM is bundled with ultralytics
    "loguru>=0.7",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ipython>=8.0",
    "notebook>=7.0",
]
basler = [
    "pypylon>=3.0",       # Basler GigE camera SDK
]

[project.scripts]
chain-inspect = "chain_inspector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chain_inspector"]
